--- a/playbill/edit/edit_bio.html
+++ b/playbill/edit/edit_bio.html
@@ -12,7 +12,7 @@
 <body>
 <div id="body">
 <div id="program_info">
-<span style="font-size: 20px;">請輸入劇名以添加、修改或刪除劇目信息：</span><br>
+<span style="font-size: 20px;">請輸入演員名字以添加或修改信息：</span><br>
 (Pleast hit "Enter" after typing.)<br>
 
 <div id="r0_performer0">
